package org.lexer

data class Position(var line: Int, var column: Int)