@startuml

class Lexer{
- lexicon: Lexicon
- position: Position
+ tokenize(input: String)
}

class Lexicon{
- tokenMap: List<Pair<String, String>>
+ getToken(component: String, location: Location)
}

class LexiconFactory{
+ createDefaultLexicon()
}

class Position{
+ column: Int
+ line: Int
}

class Location{
- column: Int
- line: Int
}

class Token{
- type: String
- value: String
- location: Location
}

Lexer o-- Position
Lexer o-- Lexicon
LexiconFactory --> Lexicon

Token o-- Location
Lexicon --> Token
Token --> Lexer
@enduml